# winusb-switcher-tauri-lite

./: .gitattributes  .gitignore  README.md  index.html  package.json
.github/workflows/: build.yml  ci.yml
scripts/: stage-jlink-for-build.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: _bundle_manifest.txt
src-tauri/src/: bundled_jlink.rs  error.rs  lib.rs  main.rs  process.rs  state.rs
src-tauri/src/commands/: download.rs  lite.rs  mod.rs  probe.rs
src-tauri/src/download/: http.rs  installer.rs  mod.rs  poll.rs  types.rs  webview.rs
src-tauri/src/jlink/: detect.rs  firmware.rs  mod.rs  runner.rs  scan.rs  scripts.rs  types.rs  usb_driver.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/renderer/: App.tsx
src/renderer/pages/: InstallJLink.tsx
src/renderer/store/: probeStore.ts
src/shared/: types.ts
